--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Car Routing Record</title>
+   <link href="logo.png" rel="icon" type="image/png" sizes="36x36">
   <style>
     body {
       font-family: Arial, sans-serif;
